--- a/src/Our.Umbraco.ModularDevelopment/Views/Partials/PromoBoxes.cshtml
+++ b/src/Our.Umbraco.ModularDevelopment/Views/Partials/PromoBoxes.cshtml
@@ -4,24 +4,7 @@
         <div class="container">
             <div class="row clearfix">
                 <div class="col-md-12 column">
-                    <div class="row">
-                        <h2>Hello World</h2>
-                        <p>Lorem ipsum.</p>
-                    </div>
-                    <div class="row">
-                        @foreach (var item in Model.View.Items)
-                        {
-                            <div class="col-sm-6 col-md-@Model.View.ColumnWidth">
-                                <div class="thumbnail">
-                                    <img alt="@item.Title" src="@item.Thumbnail" style="height: 200px; width: 100%; display: block;">
-                                    <div class="caption">
-                                        <h3>@item.Title</h3>
-                                        @item.Content
-                                    </div>
-                                </div>
-                            </div>
-                        }
-                    </div>
+                    @Html.DisplayFor(model => model.View)
                 </div>
             </div>
         </div>
