--- a/src/Our.Umbraco.ModularDevelopment/Views/Partials/DisplayTemplates/PromoBoxesViewModel.cshtml
+++ b/src/Our.Umbraco.ModularDevelopment/Views/Partials/DisplayTemplates/PromoBoxesViewModel.cshtml
@@ -14,7 +14,7 @@
         {
             <div class="col-sm-6 col-md-@Model.ColumnWidth">
                 <div class="thumbnail">
-                    <img alt="@item.Title" src="@item.Thumbnail" style="height: 200px; width: 100%; display: block;">
+                    <img alt="@item.Title" src="@item.Thumbnail" style="height: auto; width: 100%; display: block;">
                     <div class="caption">
                         <h3>@item.Title</h3>
                         @item.Content
